--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,5 +6,28 @@
 </head>
 <body>
 
+<nav>
+    <a href="{{ url_for('index') }}">Игра</a>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}">Выход</a>
+    {% else %}
+        <a href="{{ url_for('login') }}">Вход</a>
+        <a href="{{ url_for('register') }}">Регистрация</a>
+    {% endif %}
+</nav>
+<div>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div>{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+    {% block content %}
+
+    {% endblock %}
+</div>
+
 </body>
 </html>
