--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Вход!</h1>
-    <form method="POST" action="{{ url_for('login') }}">
+    <h1>Регистрация</h1>
+    <form method="POST" action="{{ url_for('register') }}">
         {{ form.hidden_tag() }}
         <div>
             {{ form.username.label }}
