--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Вход!</h1>
+    <h1>Вход</h1>
     <form method="POST" action="{{ url_for('login') }}">
         {{ form.hidden_tag() }}
         <div>
